[tool.poetry]
name = "youtube-аналитика"
version = "0.1.0"
description = ""
authors = ["ILKHOM <gaffarovilkhom@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-api-python-client = "^2.111.0"
isodate = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
